--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,16 @@
 micronaut:
   application:
     name: nossaCasaDoCodigo
-#datasources:
-#  default:
-#    url: jdbc:h2:mem:devDb;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#    driverClassName: org.h2.Driver
-#    username: sa
-#    password: ''
-#    schema-generate: CREATE_DROP
-#    dialect: H2
-#jpa.default.properties.hibernate.hbm2ddl.auto: update
+
+#-banco de dados
+datasources:
+  default:
+    url: jdbc:postgresql://localhost:15432/nossa-cdc
+    driverClassName: org.postgresql.Driver
+    username: postgres
+    password: "@901256"
+    dialect: POSTGRES
+jpa.default.properties.hibernate.hbm2ddl.auto: update
 jackson:
   serialization:
     writeDatesAsTimestamps=false:
