--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  teste-postgres-compose:
+  postgres-compose:
     image: 'postgres:alpine'
     environment:
       POSTGRES_USER: postgres
@@ -14,7 +14,7 @@ services:
     networks:
       - postgres-compose-network
       
-  teste-pgadmin-compose:
+  pgadmin-compose:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: "lucaspontes140@gmail.com"
