--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,6 +11,8 @@ datasources:
     password: "@901256"
     dialect: POSTGRES
 jpa.default.properties.hibernate.hbm2ddl.auto: update
+jpa.default.properties.hibernate.show_sql: true
+jpa.default.properties.hibernate.format_sql: true
 jackson:
   serialization:
     writeDatesAsTimestamps=false:
